header style implementation

--- a/public/assets/styles/partials/navbar.css
+++ b/public/assets/styles/partials/navbar.css
@@ -1,23 +1,29 @@
 nav {
     background-color: white;
+    font-weight: bold;
+   
 }
 
 .isActive {
     font-weight: bold;
-    color: red;
+    color: red !important;
+
 }
 
 .nav-item{
     font-size: 1.5rem;
+    font-weight: bold !important;
+}
+
+li .nav-item a {
+    font-weight: bold !important;
 }
 
 
-li .nav-item:hover {
-    font-weight: bold !important;
-    color: red !important;
+li .nav-item a:hover {
+    color: red;
 }
 
 .navbar-brand {
-    font-weight: bold;
     font-size: 2rem;
 }
