--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1,3 +1,13 @@
+.home-page a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+#inscription .btn {
+  text-decoration: none;
+}
+
 .container {
   margin-top: 100px;
 }
@@ -43,5 +53,5 @@
 }
 
 .banner-section {
-    background-color: black;
+  background-color: black;
 }
