--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -1,8 +1,25 @@
+.home-page {
+  margin: 0 4rem;
+  font-weight: 600;
+}
+
 .home-page a {
   text-decoration: none;
   color: black;
   font-weight: bold;
 }
+
+.home-page a h2 {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+.home-page p {
+  max-width: 60rem;
+  
+}
+
 
 #inscription .btn {
   text-decoration: none;
@@ -24,9 +41,12 @@
 }
 .form-container {
   background-color: #fff;
-  padding: 20px;
+  padding: 2rem;
+  margin-right: 10rem;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  min-width: 30rem;
+  
 }
 
 .banner {
@@ -54,4 +74,10 @@
 
 .banner-section {
   background-color: black;
+}
+
+
+.bg-color-red {
+  background-color: #ff3925;
+  
 }
